--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 Flask==0.12.0
 Jinja2==2.8.1
+Python==2.7.11
+Werkzeug==0.8.3
+certifi==0.0.8
+chardet==1.0.1
+distribute==0.6.24
+requests==0.11.1
 gunicorn==19.6.0
