--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-beautiful-soup==4.4.1
+beautifulsoup4==4.4.1
 Flask==0.12
 Flask-Excel==0.0.5
+gunicorn==19.6.0
+itsdangerous==0.24
 Jinja2==2.8.1
 jsonschema==2.4.0
+lxml==3.5.0
 MarkupSafe==0.23
 numpy==1.10.4
-psutil==3.4.2
 py==1.4.31
 pyexcel==0.4.2
 pyexcel-io==0.3.1
@@ -13,9 +15,12 @@ pyexcel-webio==0.0.10
 pyexcel-xls==0.3.1
 pytest==2.8.5
 python-dateutil==2.4.2
-qtconsole==4.1.1
 requests==2.9.1
+tables==3.2.2
+texttable==0.8.7
+toolz==0.7.4
+tornado==4.3
+traitlets==4.1.0
 unicodecsv==0.14.1
 virtualenv==15.1.0
 Werkzeug==0.11.3
-
