--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,67 @@
-beautifulsoup4==4.4.1
+altgraph==0.10.2
+bdist-mpkg==0.5.0
+beautifulsoup4==4.5.3
+bonjour-py==0.3
+click==6.7
 Flask==0.12
 Flask-Excel==0.0.5
 gunicorn==19.6.0
 itsdangerous==0.24
-Jinja2==2.8.1
-jsonschema==2.4.0
+Jinja2==2.9.4
+macholib==1.5.1
 MarkupSafe==0.23
-numpy==1.10.4
-py==1.4.31
+matplotlib==1.5.1
+modulegraph==0.10.4
+numpy==1.11.2
+Pillow==3.4.2
+py2app==0.7.3
 pyexcel==0.4.2
 pyexcel-io==0.3.1
 pyexcel-webio==0.0.10
-pyexcel-xls==0.3.1
-pytest==2.8.5
-python-dateutil==2.4.2
-requests==2.9.1
+pyobjc-core==2.5.1
+pyobjc-framework-Accounts==2.5.1
+pyobjc-framework-AddressBook==2.5.1
+pyobjc-framework-AppleScriptKit==2.5.1
+pyobjc-framework-AppleScriptObjC==2.5.1
+pyobjc-framework-Automator==2.5.1
+pyobjc-framework-CFNetwork==2.5.1
+pyobjc-framework-Cocoa==2.5.1
+pyobjc-framework-Collaboration==2.5.1
+pyobjc-framework-CoreData==2.5.1
+pyobjc-framework-CoreLocation==2.5.1
+pyobjc-framework-CoreText==2.5.1
+pyobjc-framework-DictionaryServices==2.5.1
+pyobjc-framework-EventKit==2.5.1
+pyobjc-framework-ExceptionHandling==2.5.1
+pyobjc-framework-FSEvents==2.5.1
+pyobjc-framework-InputMethodKit==2.5.1
+pyobjc-framework-InstallerPlugins==2.5.1
+pyobjc-framework-InstantMessage==2.5.1
+pyobjc-framework-LatentSemanticMapping==2.5.1
+pyobjc-framework-LaunchServices==2.5.1
+pyobjc-framework-Message==2.5.1
+pyobjc-framework-OpenDirectory==2.5.1
+pyobjc-framework-PreferencePanes==2.5.1
+pyobjc-framework-PubSub==2.5.1
+pyobjc-framework-QTKit==2.5.1
+pyobjc-framework-Quartz==2.5.1
+pyobjc-framework-ScreenSaver==2.5.1
+pyobjc-framework-ScriptingBridge==2.5.1
+pyobjc-framework-SearchKit==2.5.1
+pyobjc-framework-ServiceManagement==2.5.1
+pyobjc-framework-Social==2.5.1
+pyobjc-framework-SyncServices==2.5.1
+pyobjc-framework-SystemConfiguration==2.5.1
+pyobjc-framework-WebKit==2.5.1
+pyOpenSSL==0.13.1
+pyparsing==2.0.1
+python-dateutil==1.5
+pytz==2013.7
+redis==2.10.5
+rq==0.7.1
+scipy==0.18.1
+six==1.4.1
 texttable==0.8.7
-unicodecsv==0.14.1
-virtualenv==15.1.0
-Werkzeug==0.11.3
+Werkzeug==0.11.15
+xattr==0.6.4
+zope.interface==4.1.1
