--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ py2app==0.7.3
 pyexcel==0.4.2
 pyexcel-io==0.3.1
 pyexcel-webio==0.0.10
+pyexcel-xls==0.3.1
 pyOpenSSL==0.13.1
 pyparsing==2.0.1
 python-dateutil==1.5
