--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,20 @@
-altgraph==0.10.2
-bdist-mpkg==0.5.0
-beautifulsoup4==4.5.3
-click==6.7
-Flask==0.12
-Flask-Excel==0.0.5
-gunicorn==19.6.0
-itsdangerous==0.24
-Jinja2==2.9.4
-macholib==1.5.1
-MarkupSafe==0.23
-modulegraph==0.10.4
-numpy==1.11.2
-Pillow==3.4.2
-py2app==0.7.3
-pyexcel==0.4.2
-pyexcel-io==0.3.1
-pyexcel-webio==0.0.10
-pyexcel-xls==0.3.1
-pyOpenSSL==0.13.1
-pyparsing==2.0.1
-python-dateutil==1.5
-pytz==2013.7
-redis==2.10.5
-rq==0.7.1
-scipy==0.18.1
-six==1.4.1
-texttable==0.8.7
-Werkzeug==0.11.15
-xattr==0.6.4
-zope.interface==4.1.1
+beautifulsoup4==4.8.2
+certifi==2019.11.28
+chardet==3.0.4
+Click==7.0
+Flask==1.1.1
+Flask-Excel==0.0.7
+idna==2.9
+itsdangerous==1.1.0
+Jinja2==2.11.1
+lml==0.0.9
+MarkupSafe==1.1.1
+numpy==1.18.1
+pyexcel==0.5.15
+pyexcel-io==0.5.20
+pyexcel-webio==0.1.4
+requests==2.23.0
+soupsieve==2.0
+texttable==1.6.2
+urllib3==1.25.8
+Werkzeug==1.0.0
