--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ chardet==3.0.4
 Click==7.0
 Flask==1.1.1
 Flask-Excel==0.0.7
-gunicorn==19.6.0
 idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.1
@@ -14,6 +13,8 @@ numpy==1.18.1
 pyexcel==0.5.15
 pyexcel-io==0.5.20
 pyexcel-webio==0.1.4
+pyexcel-xls==0.5.8
+python-dotenv==0.13.0
 requests==2.23.0
 selenium==3.141.0
 soupsieve==2.0
