--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ chardet==3.0.4
 Click==7.0
 Flask==1.1.1
 Flask-Excel==0.0.7
+gunicorn==19.9.0
 idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.1
@@ -21,3 +22,5 @@ soupsieve==2.0
 texttable==1.6.2
 urllib3==1.25.8
 Werkzeug==1.0.0
+xlrd==1.2.0
+xlwt=1.3.0
